# cosmos_environment

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD
cren/: CMakeLists.txt
cren/data/shader/: grid.vert  mesh.frag  mesh.vert  quad.frag  quad_default.vert  quad_picking.vert  skybox.vert  terrain.frag
cren/data/shader/compiled/: 2dgrid.vert.spv  mesh.frag.spv  quad_picking.vert.spv  skybox.vert.spv  terrain.vert.spv  terrain_picking.frag.spv  terrain_picking.vert.spv
cren/data/shader/include/: push_constant.glsl
cren/include/: cren.h  cren_callback.h  cren_camera.h  cren_context.h  cren_defines.h  cren_error.h  cren_math.h  cren_platform.h  cren_utils.h  cren_vulkan.h
cren/source/: cren_callback.c  cren_camera.c  cren_context.c  cren_error.c  cren_math.c  cren_platform.c  cren_utils.c  cren_vulkan.c
project_android/: gradle.properties  settings.gradle
project_android/app/: build.gradle
project_android/app/src/androidTest/java/com/project_android/: ExampleInstrumentedTest.java
project_android/app/src/main/: AndroidManifest.xml
project_android/app/src/main/assets/data/shader/: _compile.bat  mesh_picking.frag  mesh_picking.vert  quad_picking.frag  skybox.frag  terrain.vert  terrain_picking.frag  terrain_picking.vert
project_android/app/src/main/assets/data/shader/compiled/: mesh_picking.vert.spv  quad.vert.spv  skybox.frag.spv  sprite.frag.spv  terrain.frag.spv
project_android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
project_android/app/src/main/cpp/resistorcalc/: Application.cpp  Application.h  ResistorCalc.cpp  ResistorCalc.h
project_android/app/src/main/java/com/project_android/: Main.java
project_android/app/src/main/res/layout/: activity_main.xml
project_android/app/src/main/res/values/: strings.xml
project_android/app/src/test/java/com/project_android/: ExampleUnitTest.java
project_android/gradle/wrapper/: gradle-wrapper.properties
project_editor/: CMakeLists.txt
project_editor/data/shader/: 2dgrid.frag  _compile.bat
project_editor/data/shader/compiled/: 2dgrid.frag.spv  mesh_default.vert.spv  mesh_picking.frag.spv
project_editor/data/shader/include/: fun.glsl  ubo_mesh.glsl
project_editor/include/core/: application.h
project_editor/include/ui/: console.h  demo.h  dockspace.h  viewport.h
project_editor/source/: main.cpp
project_editor/source/core/: application.cpp
project_editor/source/ui/: console.cpp  demo.cpp  dockspace.cpp  viewport.cpp
project_engine/: CMakeLists.txt
project_engine/include/: cosmos.h
project_engine/include/core/: application.h  input.h  logger.h  renderer.h  window.h
project_engine/include/scene/: components.h  entity.h  prefab.h  world.h
project_engine/include/ui/: gizmo.h  gui.h  theme.h  widget.h  wrapper_imgui.h
project_engine/include/util/: datafile.h  library.h
project_engine/source/core/: application.cpp  logger.cpp  renderer.cpp  window.cpp
project_engine/source/scene/: components.cpp  entity.cpp  prefab.cpp  world.cpp
project_engine/source/ui/: gizmo.cpp  gui.cpp  widget.cpp
project_engine/source/util/: datafile.cpp
project_helloworld/: CMakeLists.txt  example_glfw.c
project_thirdparty/glfw/: CMakeLists.txt
project_thirdparty/imgui/: CMakeLists.txt
project_thirdparty/imgui/imgui/: ImGui.vcxproj
